--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+        body{
+            font-size: 16px;
+        }
         h1{
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
         }
         ul{
             background-color: palegreen;
@@ -14,15 +18,33 @@
         .list{
             background-color: orangered;
         }
+        p{
+            font-weight: 600;
+            font-size: 3em;
+            font-style: italic;
+            text-align: center;
+            text-decoration: purple;
+        }
+        #yellow{
+            background-color: yellow;
+        }
+        #red{
+            background-color: red;
+                   
+        }
+        #brown{
+            background-color: saddlebrown;
+
+        }            
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="list"> Qual é a sua cor favorita?</p>
     <ul class="list">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
 
     <!-- Exercícios
@@ -30,6 +52,14 @@
  - Modifique a cor do texto do h1 para laranja
  - Modifique a cor de fundo da lista não ordenada 
  - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo
+    -->
+    <!-- Exercícios
+     1 - Modifique o família do h1 para sans-serif
+     2 - Deixe o paragrafo com o font-weight 600
+     3 - Modifique o font-size do body para 16px
+     4 - Coloque o tamanho do paragrafo com o tamanho de 3 vezes o padrão do body
+     5 - Explore as propriedades font-style, line-height, text-align e text-decoration
+     6 - Troque a cor de fundo de cada item da lista para a cor correspondente ao texto
     -->
   </body>
 </html>
