--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -3,39 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        body{
-            font-size: 16px;
-        }
-        h1{
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif;
-        }
-        ul{
-            background-color: palegreen;
-        }
-        .list{
-            background-color: orangered;
-        }
-        p{
-            font-weight: 600;
-            font-size: 3em;
-            font-style: italic;
-            text-align: center;
-            text-decoration: purple;
-        }
-        #yellow{
-            background-color: yellow;
-        }
-        #red{
-            background-color: red;
-                   
-        }
-        #brown{
-            background-color: saddlebrown;
-
-        }            
+               
     </style>
   </head>
   <body>
@@ -60,6 +30,9 @@
      4 - Coloque o tamanho do paragrafo com o tamanho de 3 vezes o padrão do body
      5 - Explore as propriedades font-style, line-height, text-align e text-decoration
      6 - Troque a cor de fundo de cada item da lista para a cor correspondente ao texto
+    -->
+    <!-- Exercícios
+      Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo.
     -->
   </body>
 </html>
